Add Facebook domain verification meta tag

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Grupo Arruda - Ecossistema de Inovação Digital</title>
+    <meta name="facebook-domain-verification" content="rqjvkltqscn8uvq6k0z2l9y2xlrkyu" />
     <meta name="description" content="Soluções integradas de marketing digital, desenvolvimento de software e consultoria estratégica. Transformamos ideias em resultados mensuráveis.">
     <meta name="author" content="Grupo Arruda" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
